data/derived/sp14/progs/unify/prog4434.ml.out
Characters 111-112:
  (m - 1, (mulByDigit (x*(int_of_float(m**10.0))) l2)::n) in
                                       ^
Error: This expression has type int but an expression was expected of type
         float
